--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.4.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "normalize.css": "^8.0.1",
     "postcss": "^8.2.14",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
