--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.4.1",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "postcss": "^8.2.14",
